2008-06-05  Antti Koivisto  <antti@apple.com>

        Reviewed by Darin.
        
        Support compiling JavaScriptCore for ARM.

        * kjs/collector.cpp:
        (KJS::getPlatformThreadRegisters):
        (KJS::otherThreadStackPointer):

2008-06-05  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Jon.

        - Name changes.

        * JavaScriptCore.exp:
        * profiler/Profile.cpp:
        (KJS::Profile::Profile):
        (KJS::Profile::stopProfiling):
        (KJS::Profile::didExecute):
        (KJS::Profile::forEach):
        (KJS::Profile::debugPrintData):
        (KJS::Profile::debugPrintDataSampleStyle):
        * profiler/Profile.h:
        (KJS::Profile::callTree):
        (KJS::Profile::totalTime):
        (KJS::Profile::sortTotalTimeDescending):
        (KJS::Profile::sortTotalTimeAscending):
        (KJS::Profile::sortSelfTimeDescending):
        (KJS::Profile::sortSelfTimeAscending):
        (KJS::Profile::sortCallsDescending):
        (KJS::Profile::sortCallsAscending):
        (KJS::Profile::sortFunctionNameDescending):
        (KJS::Profile::sortFunctionNameAscending):
        (KJS::Profile::focus):
        (KJS::Profile::exclude):
        (KJS::Profile::restoreAll):

2008-06-05  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Stephanie Lewis.

        Added the -fno-move-loop-invariants flag to the pcre_exec.cpp build, to
        tell GCC not to perform loop invariant motion, since GCC's loop
        invariant motion doesn't do very well with computed goto code.
        
        SunSpider reports no change.

2008-06-05  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Stephanie Lewis.
        
        Added the -fno-tree-pre flag to the Machine.cpp build, to tell GCC not
        to perform Partial Redundancy Elimination (PRE) on trees in Machine.cpp,
        since GCC's PRE doesn't do very well with computed goto code.
        
        SunSpider reports a .7% speedup.
        